Added an HTML joke

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="row">
             <div class="col-12 col-md-4">
                 <div class="card">
-                    <img class="card-img-top" src="https://github.com/digitalocean.png" alt="Card image">
+                    <img class="card-img-top" src="https://github.com/aniket-spidey.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">YOUR NAME (Demo)</h4>
-                        <p class="card-text">YOUR JOKE (Demo)</p>
+                        <h4 class="card-title">Aniket Raj</h4>
+                        <p class="card-text">HTML - How To Meet Ladies</p>
                     </div>
                 </div>
             </div>
