--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
             </div>
             <div class="col-12 col-md-4">
                 <div class="card">
-                    <img class="card-img-top" src="https://github.com/digitalocean.png" alt="Card image">
+                    <img class="card-img-top" src="https://github.com/bagladivyang03.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">YOUR NAME (#HF91489)</h4>
-                        <p class="card-text">YOUR JOKE (#HF91489)</p>
+                        <h4 class="card-title">Divyang Bagla</h4>
+                        <p class="card-text">A user interface is like a joke. If you have to explain it, It's not that good.</p>
                     </div>
                 </div>
             </div>
