--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <div class="card">
                     <img class="card-img-top" src="https://github.com/digitalocean.png" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">YOUR NAME (#HF89621)</h4>
-                        <p class="card-text">YOUR JOKE (#HF89621)</p>
+                        <h4 class="card-title">Amisha Sharma</h4>
+                        <p class="card-text">Let's play!!</p>
                     </div>
                 </div>
             </div>
